2011-05-20  Robby Stephenson  <robby@periapsis.org>

	* Added importer for Goodreads collections.

2011-05-13  Pedro Miguel Carvalho <kde@pmc.com.pt>

	* Added shortcut key to switch main window to/from full screen state.
	* Added shortcut key to show/hide menubar (Bug 251157).

2011-05-07  Pedro Miguel Carvalho <kde@pmc.com.pt>

	* Added UI controls for changing icon size (Bug 250907).

2011-05-07  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with image link in Tri-Column report template (Bug 272744).

2011-05-06  Robby Stephenson  <robby@periapsis.org>

	* Added French, Spanish, and German codes for TheMovieDB.
	* Added icon cache to improve performance with large images
	  (Patch from Pedro Miguel Carvalho, Bug 272583).

2011-05-01  Robby Stephenson  <robby@periapsis.org>

	* Changed image loading to use known id instead of recalculating, improves performance.

2011-04-10  Robby Stephenson  <robby@periapsis.org>

	* Improved performance for loading and sorting large collections.
	* Released Tellico 2.3.3.

2011-04-04  Robby Stephenson  <robby@periapsis.org>

	* Fixed bug with loans not being updated for removed entries (Bug 270129).

2011-03-21  Robby Stephenson  <robby@periapsis.org>

	* Fixed crashing bug for editing some values (Bug 269044).

2011-03-19  Robby Stephenson  <robby@periapsis.org>

	* Fixed editing existing filters (Bug 268829).

2011-03-07  Robby Stephenson  <robby@periapsis.org>

	* Added Manga search for AnimeNfo.

2011-02-27  Robby Stephenson  <robby@periapsis.org>

	* Fixed parsing bug with AnimeNfo results.

2011-02-23  Regis Boudin

	* Updated videodev include for compatibility with Linux kernel 2.6.38+.

2011-02-21  Robby Stephenson  <robby@periapsis.org>

	* Added data source for douban.com.

2011-02-19  Robby Stephenson  <robby@periapsis.org>

	* Added data source fetcher for filmaster.com.

2011-02-18  Regis Boudin

	* Fixed build with GCC 4.6.

2011-02-13  Robby Stephenson  <robby@periapsis.org>
