@@ -24,3 +24,8 @@ Id=tellico-1.3
 File=tellicorc
 Options=overwrite
 Script=tellico-1-3-update.pl,perl
+#
+Id=tellico-3.0
+File=tellicorc
+Group=General Options
+RemoveKey=Show Entry View
