@@ -71,9 +71,6 @@
     <entry key="Show Edit Widget" type="Bool">
         <default>false</default>
     </entry>
-    <entry key="Show Entry View" type="Bool">
-        <default>true</default>
-    </entry>
     <entry key="Image Location" type="Enum">
       <choices>
         <choice name="ImagesInFile"/>
