@@ -1,3 +1,8 @@
+2011-05-29  Robby Stephenson  <robby@periapsis.org>
+
+	* Made Entry View always visible.
+	* Moved icon view to share space with the list view.
+
 2011-05-20  Robby Stephenson  <robby@periapsis.org>
 
 	* Added importer for Goodreads collections.
